--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,32 @@
 .navbar-right a {
     font-size: 1em;
 }
+
+.primary-colors {
+    background-color: #1ABC9C;
+    color: #FFF;
+}
+
+.avatar {
+    padding-top: 100px;
+    padding-bottom: 30px;
+    width: 200px;
+}
+
+.text-centered {
+    text-align: center;
+}
+
+h1 {
+    font-size: 60px;
+    font-weight: 700;
+}
+
+div.col-xs-12 p {
+    font-size: 40px;
+    padding-bottom: 20px;
+}
+
+div.col-xs-12 p:last-child {
+    font-size: 25px;
+}
