--- a/css/style.css
+++ b/css/style.css
@@ -209,19 +209,27 @@ h2 {
     font-size: 18px;
 }
 
+/* contact */
+
 .form-group {
-    height: 90px;
+    height: 100px;
     border-bottom: 1px solid #e9ecef;
+    position: relative;
+    margin-bottom: 25px;
+    padding-top: 5px;
 }
 
 .form-control {
     border: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0);
     font-size: 24px;
     font-family:'Lato', sans-serif;
     line-height: 1.5;
     color: rgba(33, 37, 41);
+}
+
+.form-control, .form-control:focus {
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
 
 .form-group.message {
@@ -241,6 +249,21 @@ h2 {
     color: #fff;
     background-color: #159a80;
     border-color: #148f77;
+}
+
+label {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    color:  #1abc9c;
+    font-size: 14px;
+    font-weight: 300;
+    visibility: hidden;
+}
+
+input:focus + label,
+textarea:focus + label{
+    visibility: visible;
 }
 
 /* footer */
